--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2"
 once_cell = "1.17"
-console_error_panic_hook = "0.1"
-
+js-sys = "0.3"
 
 [dependencies.web-sys]
 version = "0.3"
