--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2"
 once_cell = "1.17"
 js-sys = "0.3"
+# yew = "0.21.0"
+# indexmap = "2.6.0"
+# implicit-clone = "0.5.0"
+yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 
 [dependencies.web-sys]
 version = "0.3"
