--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,13 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 once_cell = "1.17"
 js-sys = "0.3"
-# yew = "0.21.0"
-# indexmap = "2.6.0"
-# implicit-clone = "0.5.0"
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
+gloo-net = "0.6.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.web-sys]
 version = "0.3"
